syntax = "proto3";

package polyglot.test;

option java_outer_classname = "TestProto";

import "google/protobuf/any.proto";
import "src/main/proto/testing/foo/foo.proto";

message TestRequest {
  string message = 1;
  foo.Foo foo = 2;
  int32 number = 3;
  google.protobuf.Any any = 4;
}

message TestResponse {
  string message = 1;
}

service TestService {
  rpc TestMethod (TestRequest) returns (TestResponse) {}
  rpc TestMethodStream (TestRequest) returns (stream TestResponse) {}
  rpc TestMethodClientStream (stream TestRequest) returns (TestResponse) {}
  rpc TestMethodBidi (stream TestRequest) returns (stream TestResponse) {}
}
